# madweight-mockup

./: .travis.yml  Algorithm.cpp  CMakeLists.txt  Node.cpp  Node.hpp  README.md  Scalar.hpp  Variable.cpp  Variable.hpp  test.cpp
addons/graphviz/: CMakeLists.txt  GraphViz.cpp  GraphViz.hpp  test.cpp
addons/swig/: CMakeLists.txt  Python.cmake  core.i  mwcore.i  plugins.i
core/: Algorithm.cpp  Algorithm.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Graph.cpp  Graph.hpp  Job.cpp  Job.hpp  JobFactory.cpp  JobFactory.hpp  LorentzVector.cpp  LorentzVector.hpp  Module.cpp  Module.hpp  NVector.cpp  NVector.hpp  Node.cpp  Node.hpp  Scalar.cpp  Scalar.hpp  Variable.cpp  Variable.hpp  VariableArray.cpp  VariableArray.hpp  defs.cpp  defs.hpp  test.cpp
examples/: CMakeLists.txt  test.cpp
examples/ME/: CMakeLists.txt
examples/ME/W_2j/: HelAmps_sm.cc  HelAmps_sm.h  P0_Sigma_sm_dcx_mumvmxucx_W_2j.cc  P0_Sigma_sm_dcx_mumvmxucx_W_2j.h  P0_Sigma_sm_dd_mumvmxud_W_2j.cc  P0_Sigma_sm_dd_mumvmxud_W_2j.h  P0_Sigma_sm_ddx_mumvmxudx_W_2j.cc  P0_Sigma_sm_ddx_mumvmxudx_W_2j.h  P0_Sigma_sm_ddx_mupvmdux_W_2j.cc  P0_Sigma_sm_ddx_mupvmdux_W_2j.h  P0_Sigma_sm_ds_mumvmxus_W_2j.cc  P0_Sigma_sm_ds_mumvmxus_W_2j.h  P0_Sigma_sm_dux_mumvmxccx_W_2j.cc  P0_Sigma_sm_dux_mumvmxccx_W_2j.h  P0_Sigma_sm_dux_mumvmxddx_W_2j.cc  P0_Sigma_sm_dux_mumvmxddx_W_2j.h  P0_Sigma_sm_dux_mumvmxgg_W_2j.cc  P0_Sigma_sm_dux_mumvmxgg_W_2j.h  P0_Sigma_sm_dux_mumvmxuux_W_2j.cc  P0_Sigma_sm_dux_mumvmxuux_W_2j.h  P0_Sigma_sm_dxdx_mupvmuxdx_W_2j.cc  P0_Sigma_sm_dxdx_mupvmuxdx_W_2j.h  P0_Sigma_sm_dxsx_mupvmuxsx_W_2j.cc  P0_Sigma_sm_dxsx_mupvmuxsx_W_2j.h  P0_Sigma_sm_gd_mumvmxgu_W_2j.cc  P0_Sigma_sm_gd_mumvmxgu_W_2j.h  P0_Sigma_sm_gdx_mupvmgux_W_2j.cc  P0_Sigma_sm_gdx_mupvmgux_W_2j.h  P0_Sigma_sm_gg_mumvmxudx_W_2j.cc  P0_Sigma_sm_gg_mumvmxudx_W_2j.h  P0_Sigma_sm_gg_mupvmdux_W_2j.cc  P0_Sigma_sm_gg_mupvmdux_W_2j.h  P0_Sigma_sm_gu_mupvmgd_W_2j.cc  P0_Sigma_sm_gu_mupvmgd_W_2j.h  P0_Sigma_sm_gux_mumvmxgdx_W_2j.cc  P0_Sigma_sm_gux_mumvmxgdx_W_2j.h  P0_Sigma_sm_uc_mupvmcd_W_2j.cc  P0_Sigma_sm_uc_mupvmcd_W_2j.h  P0_Sigma_sm_uc_mupvmus_W_2j.cc  P0_Sigma_sm_uc_mupvmus_W_2j.h  (+42 more)
examples/ME/W_4j/: HelAmps_sm.cc  HelAmps_sm.h  P0_Sigma_sm_csx_mupvmucuxcx_W_4j.cc  P0_Sigma_sm_csx_mupvmucuxcx_W_4j.h  P0_Sigma_sm_dcx_mumvmxggucx_W_4j.cc  P0_Sigma_sm_dcx_mumvmxggucx_W_4j.h  P0_Sigma_sm_dcx_mumvmxuccxcx_W_4j.cc  P0_Sigma_sm_dcx_mumvmxuccxcx_W_4j.h  P0_Sigma_sm_dcx_mumvmxudcxdx_W_4j.cc  P0_Sigma_sm_dcx_mumvmxudcxdx_W_4j.h  P0_Sigma_sm_dcx_mumvmxuscxsx_W_4j.cc  P0_Sigma_sm_dcx_mumvmxuscxsx_W_4j.h  P0_Sigma_sm_dcx_mumvmxuuuxcx_W_4j.cc  P0_Sigma_sm_dcx_mumvmxuuuxcx_W_4j.h  P0_Sigma_sm_dcx_mupvmdduxcx_W_4j.cc  P0_Sigma_sm_dcx_mupvmdduxcx_W_4j.h  P0_Sigma_sm_dd_mumvmxggud_W_4j.cc  P0_Sigma_sm_dd_mumvmxggud_W_4j.h  P0_Sigma_sm_dd_mumvmxucdcx_W_4j.cc  P0_Sigma_sm_dd_mumvmxucdcx_W_4j.h  P0_Sigma_sm_dd_mumvmxudddx_W_4j.cc  P0_Sigma_sm_dd_mumvmxudddx_W_4j.h  P0_Sigma_sm_dd_mumvmxuudux_W_4j.cc  P0_Sigma_sm_dd_mumvmxuudux_W_4j.h  P0_Sigma_sm_dd_mupvmdddux_W_4j.cc  P0_Sigma_sm_dd_mupvmdddux_W_4j.h  P0_Sigma_sm_ddx_mumvmxggudx_W_4j.cc  P0_Sigma_sm_ddx_mumvmxggudx_W_4j.h  P0_Sigma_sm_ddx_mumvmxuccxdx_W_4j.cc  P0_Sigma_sm_ddx_mumvmxuccxdx_W_4j.h  P0_Sigma_sm_ddx_mumvmxuddxdx_W_4j.cc  P0_Sigma_sm_ddx_mumvmxuddxdx_W_4j.h  P0_Sigma_sm_ddx_mumvmxuuuxdx_W_4j.cc  P0_Sigma_sm_ddx_mumvmxuuuxdx_W_4j.h  P0_Sigma_sm_ddx_mupvmcduxcx_W_4j.cc  P0_Sigma_sm_ddx_mupvmcduxcx_W_4j.h  P0_Sigma_sm_ddx_mupvmdduxdx_W_4j.cc  P0_Sigma_sm_ddx_mupvmdduxdx_W_4j.h  P0_Sigma_sm_ddx_mupvmggdux_W_4j.cc  P0_Sigma_sm_ddx_mupvmggdux_W_4j.h  (+376 more)
examples/ME/ZH/: CMakeLists.txt  check_sa.cpp
examples/ME/Zll_Hbb/: HelAmps_sm.cc  HelAmps_sm.h  P0_Sigma_sm_ddx_epembbx_Zll_Hbb.cc  P0_Sigma_sm_ddx_epembbx_Zll_Hbb.h  P0_Sigma_sm_uux_epembbx_Zll_Hbb.cc  P0_Sigma_sm_uux_epembbx_Zll_Hbb.h  Parameters_sm.cc  Parameters_sm.h
examples/ME/qcd_2j/: HelAmps_sm.cc  HelAmps_sm.h  P0_Sigma_sm_gg_gg_qcd_2j.cc  P0_Sigma_sm_gg_gg_qcd_2j.h  P0_Sigma_sm_gg_uux_qcd_2j.cc  P0_Sigma_sm_gg_uux_qcd_2j.h  P0_Sigma_sm_gu_gu_qcd_2j.cc  P0_Sigma_sm_gu_gu_qcd_2j.h  P0_Sigma_sm_gux_gux_qcd_2j.cc  P0_Sigma_sm_gux_gux_qcd_2j.h  P0_Sigma_sm_uc_uc_qcd_2j.cc  P0_Sigma_sm_uc_uc_qcd_2j.h  P0_Sigma_sm_ucx_ucx_qcd_2j.cc  P0_Sigma_sm_ucx_ucx_qcd_2j.h  P0_Sigma_sm_uu_uu_qcd_2j.cc  P0_Sigma_sm_uu_uu_qcd_2j.h  P0_Sigma_sm_uux_ccx_qcd_2j.cc  P0_Sigma_sm_uux_ccx_qcd_2j.h  P0_Sigma_sm_uux_gg_qcd_2j.cc  P0_Sigma_sm_uux_gg_qcd_2j.h  P0_Sigma_sm_uux_uux_qcd_2j.cc  P0_Sigma_sm_uux_uux_qcd_2j.h  P0_Sigma_sm_uxcx_uxcx_qcd_2j.cc  P0_Sigma_sm_uxcx_uxcx_qcd_2j.h  P0_Sigma_sm_uxux_uxux_qcd_2j.cc  P0_Sigma_sm_uxux_uxux_qcd_2j.h  Parameters_sm.h
examples/ME/qcd_4j/: HelAmps_sm.cc  HelAmps_sm.h  P0_Sigma_sm_ccx_ucuxcx_qcd_4j.cc  P0_Sigma_sm_ccx_ucuxcx_qcd_4j.h  P0_Sigma_sm_ddx_ucuxcx_qcd_4j.cc  P0_Sigma_sm_ddx_ucuxcx_qcd_4j.h  P0_Sigma_sm_gg_gggg_qcd_4j.cc  P0_Sigma_sm_gg_gggg_qcd_4j.h  P0_Sigma_sm_gg_gguux_qcd_4j.cc  P0_Sigma_sm_gg_gguux_qcd_4j.h  P0_Sigma_sm_gg_ucuxcx_qcd_4j.cc  P0_Sigma_sm_gg_ucuxcx_qcd_4j.h  P0_Sigma_sm_gg_uuuxux_qcd_4j.cc  P0_Sigma_sm_gg_uuuxux_qcd_4j.h  P0_Sigma_sm_gu_gggu_qcd_4j.cc  P0_Sigma_sm_gu_gggu_qcd_4j.h  P0_Sigma_sm_gu_guccx_qcd_4j.cc  P0_Sigma_sm_gu_guccx_qcd_4j.h  P0_Sigma_sm_gu_guuux_qcd_4j.cc  P0_Sigma_sm_gu_guuux_qcd_4j.h  P0_Sigma_sm_gux_gcuxcx_qcd_4j.cc  P0_Sigma_sm_gux_gcuxcx_qcd_4j.h  P0_Sigma_sm_gux_gggux_qcd_4j.cc  P0_Sigma_sm_gux_gggux_qcd_4j.h  (+53 more)
graphviz/: CMakeLists.txt  FindGRAPHVIZ.cmake  Graph.cpp  Graph.hpp  GraphViz.cpp  GraphViz.hpp  test.cpp
mem/: CMakeLists.txt  MadGraphME.hpp  MatrixElement.cpp  MatrixElement.hpp  MomentumMapper.cpp  MomentumMapper.hpp  TransferFunction.cpp  TransferFunction.hpp
plugins/: AbstractLibraryLoader.hpp  CMakeLists.txt  LibraryLoader.cpp  LibraryLoader.hpp  LinuxLibraryLoader.cpp  LinuxLibraryLoader.hpp  Plugin.hpp  PluginFactory.cpp  PluginFactory.hpp  test.cpp  testplugin.cpp
swig/: test.i  (+4 more)
tests/: CMakeLists.txt  samplealgorithm.hpp  samplemodule.hpp  sampleplugin.cpp  simple_graph.hpp  test-core.cpp  test-plugins.cpp  test-py-core.py  testpycore.py  testpyplugins.py
(+108 files in other folders)
