OPTION(ENABLE_GRAPHVIZ "Build with GraphViz support" ON)
if (ENABLE_GRAPHVIZ)
    SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")
    find_package(GRAPHVIZ)
    if (NOT GRAPHVIZ_FOUND)
        message("GRAPHVIZ not found - plugin disabled")
        set(ENABLE_GRAPHVIZ OFF)
    endif (NOT GRAPHVIZ_FOUND)
endif (ENABLE_GRAPHVIZ)

if (ENABLE_GRAPHVIZ)
include_directories(${GRAPHVIZ_INCLUDE_DIRS})
link_directories(${GRAPHVIZ_LIBRARIES})
add_library(mw-graph SHARED Graph.cpp)

add_executable(test-graph test.cpp)
target_link_libraries(test-graph mw-core mw-graph graph gvc cdt)
add_dependencies(test-graph mw-core mw-graph)
endif(ENABLE_GRAPHVIZ)
