OPTION(ENABLE_SWIG "Build with Python support using SWIG" ON)
if (ENABLE_SWIG)
    find_package(SWIG)
    include(Python.cmake)
    if (NOT SWIG_FOUND)
        message("SWIG not found - SWIG plugin disabled")
        set(ENABLE_SWIG OFF)
    endif (NOT SWIG_FOUND)
    if (NOT PYTHONINTERP_FOUND)
        message("PYTHON not found - SWIG plugin disabled")
        set(ENABLE_SWIG OFF)
    endif (NOT PYTHONINTERP_FOUND)
endif (ENABLE_SWIG)

if (ENABLE_SWIG)
    set(CMAKE_CXX_FLAGS ${CXXCOMPILEFLAGS})
    include(${SWIG_USE_FILE})
    include_directories(${PYTHON_INCLUDE_PATH})
    include_directories(${PROJECT_SOURCE_DIR}/addons/swig ${PROJECT_SOURCE_DIR}/core ${PROJECT_SOURCE_DIR}/plugins)
    set(CMAKE_SWIG_FLAGS "")
    macro(ADD_TO_SWIG module name addlibraries)
        set_source_files_properties(${name} PROPERTIES CPLUSPLUS ON)
        #set_source_files_properties(${name} PROPERTIES SWIG_FLAGS "-includeall")
        swig_add_module(${module} python ${name} ${ARGN})
        swig_link_libraries(${module} ${PYTHON_LIBRARIES} ${addlibraries})
        #add_dependencies(${SWIG_MODULE_${module}_REAL_NAME} mw-core mw-plugins)
    endmacro(ADD_TO_SWIG)
    
    ADD_TO_SWIG(mwcore mwcore.i mw-core)
    ADD_TO_SWIG(mwplugins plugins.i mw-plugins)
endif(ENABLE_SWIG)
